--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^6.1.20",
+    "@storybook/addon-docs": "6.1.20",
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-knobs": "6.1.20",
     "@storybook/addon-links": "^6.1.20",
